--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script);
-
 @import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
 
-@import url(http://fonts.googleapis.com/css?family=Pacifico);
-
-/* Toggle Styles */
-
-#wrapper {
-	padding-left: 0px;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+body {
+	font-family: sans-serif;
 }
+/* Toggle Styles */
 
 #wrapper.toggled {
 	padding-left: -250px;
@@ -26,7 +19,7 @@
 	height: 100%;
 	margin-left: -250px;
   overflow-y: none;
-  background: rgba(255,0,0,0.6); 
+  background: rgba(255,240,245,0.25);
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -34,8 +27,22 @@
 	top: 0;
 }
 
+.hidden {
+	display: none;
+}
+
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
+}
+
+#wrapper.toggled .arrow-icon {
+	transform: rotate(180deg);
+	color: #FFE4C4;
+}
+
+#wrapper.toggled .arrow-icon:hover{
+	color: #20B2AA;
+	font-size: 1em;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -47,7 +54,7 @@
 /* Sidebar Nav Icon Styles */
 
 .sidebar-nav {
-	height: 70%;
+	height: 60%;
 	margin-top: 30%;
   position: relative;
 	list-style: none;
@@ -61,109 +68,105 @@
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: white;
+    color: #20B2AA;
     font-size: 4em;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
-  color: yellow;
-	
+	font-size: 4.5em;
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
+		font-size: 3.5em;
+		color: peru;
 }
 
 .sidebar-nav > .sidebar-home {
     height: 100px;
-    font-size: 18px;
     line-height: 60px;
 }
 
-.sidebar-nav > .sidebar-home a {
-    color: #FFF;
+.fa-home {
+	color: black;
 }
 
-.sidebar-nav > .sidebar-home a:hover {
-    color: yellow;
-    
+.fa-home:hover{
+	font-size: 1em;
 }
 
-#menu-toggle {
-    float: right;
-    position: relative;
-    top: 100px;
+.btn {
+	align-content: center; 
+	position: relative;
+	font-size: 3.5em;
+	color: #FFE4C4;
+	left: 30px;
+}
+
+.btn:hover{
+	color: black;
+	font-size: 3.8em;
 }
 
 /* End of Sidebar Styles */
 
 /* Main Page Content */
 
-#page-content-wrapper {
-	width: 100%;
-	position: absolute;
+#wrapper {
+	padding: 0px;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
-.row {
-	height: 1200px;
-	background-image: url(../images/skyline.jpg);
+.intro {
+	width: 100%;
+	height: 900px;
+	margin: 0;
 	background-size: cover;
 }
 
-.col-lg-12 {
-	height: 100px;
+.banner {
+	width: 60%;
+	margin: 10% 20%;
+	text-align: center;
+	position: relative;
+	z-index: 1000;	
 }
 
 .navigation {
   width: 100%;
-	height: 100%;
+	padding-right: 5%;
 	float: right;
 	position: relative;
 	text-align: right;
 }
 
-.banner {
-	width: 60%;
-	margin-left: 20%;
-	height: 440px;
-	margin-top: 220px;
-	text-align: center;
-	position: relative;
-}
 
 .about {
-	border: 2px solid black;
-	height: 1000px;
-	width: 100%;
+	position: relative;
+	margin-bottom: 10%;
 }
 
 .wrap-about {
-	width: 40%;
-	margin-left: 5%;
-	height: 600px;
-	margin-top: 10%;
-	text-align: center;
-	float: left;
+	padding-left: 20%;
+	padding-bottom: 10%;
 }
 
 .wrap-contact-form {
-	width: 40%;
-	margin-right: 5%;
-	height: 600px;
-	margin-top: 10%;
-	float: right;
+	padding-left: 15%;
+	padding-bottom: 5%;
 }
 /* End of Main Page Content*/
 
 
-
-
 .my-name {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Ubuntu';
   color: black;
-	text-shadow: 2px 3px black;
+	text-shadow: 2px 3px #FFE4C4;
   font-size: 8em;
   line-height: 1;
 }
@@ -172,62 +175,31 @@
 	line-height: 3;
 	text-decoration: none;
 	font-family: 'Raleway Dots';
-	text-shadow: 2px 3px white;
-	font-size: 7em;
-	color: black;
-	padding: 6px;
-	outline: 2px dashed #98abb9;
-  outline-offset: -6px;
-  /*shadow*/
-    -webkit-box-shadow: 2px 2px 2px #000;
-    -moz-box-shadow: 2px 2px 2px #000;
-    box-shadow: 2px 2px 2px #000;
+	text-shadow: 2px -2px black;
+	font-size: 6em;
+	color: #20B2AA;
+	font-weight: bold;
 }
 
 .portfolio-link:hover{
 	text-decoration: none;
-	font-size: 7em;
-	color: white;
-	text-shadow: 2px 3px black;
-	opacity: 0.9;
-	-webkit-transform: scale (1.3);
-	-ms-transform: scale(1.3);
-	transform: scale(1.3);
-	transition: 7s ease;
+	font-size: 6.5em;
+	color: black;
+	text-shadow: 2px 3px white;
+	opacity: 0.7;
+	transition: 1.5s ease;
+	text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2;
 }
 
-.about-link {
-	font-family: 'Raleway Dots';
-  font-size: 4em;
-  text-decoration: none;
-	margin: 0 0.5em;
-  color: white;
-	text-shadow: 4px 4px black;
-	padding: 7px;
-}
-
-.about-link:hover{
+.portfolio-link:active {
 	text-decoration: none;
-	color: deeppink;
-	opacity: 0.8;
-	transition: 2s ease;
-	text-shadow: none;
-}
-
-.home {
-	font-size: 3em;
-	color: pink;
-}
-
-.home:hover{
-	color: red;
-	opacity: .5;
+	color: peru;
 }
 
 .about-title {
-	font-family: "Avant Garde", "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-  font-size: 92px;
-  padding: 80px 50px;
+	font-family: "Avant Garde", "Century Gothic", "AppleGothic", sans-serif;
+ 	font-size: 5em;
+  padding: 5%;
   text-align: center;
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
@@ -238,17 +210,36 @@
 
 .about-par {
 	font-size: 2em;
-	padding: 0 25%;
-}
-.fa-chevron-circle-left {
-    font-size: 30px;
-    color: #FFF;
 }
 
+#submitForm{
+		width: 100px;
+		height: 40px;
+		font-family: 'Dancing Script';
+		font-size: 2em;
+		color: white;
+		background-color: palevioletred;
+		text-align: center;
+		border-radius: 5px;
+		border: none; 
+		box-shadow: 2px 3px black;
+		margin-left: 45%;
+		margin-top: 2%;
+}
 
+#submitForm:hover {
+		background-color: white;
+		color: palevioletred;
+		border: 1px solid gray;
+}
 
-
-
+.contact-form-title {
+		font-family: 'Helvetica Neue';
+		font-size: 2.5em;
+		text-shadow: -2px 1px #AAA;
+		padding: 2%;
+		
+}
 /* Scroll Arrow Style */
 .arrow-wrap {
  	position: absolute;
@@ -263,7 +254,7 @@
   font-size: 0.5em;
   display: block;
   box-shadow: 1px 3px 5px 0px #333;
-	opacity: 0.7;
+	opacity: 1;
 }
 
 .arrow {
@@ -287,22 +278,27 @@
 	border-style: solid;
 	border-width: 3em 3em 0 3em;
 	border-color: #111 transparent transparent transparent;
-  -webkit-transform:rotate(360deg)
+  -webkit-transform: rotate(360deg)
 }
 
 .hint {
-  position:absolute;
-  top:0.6em;
-  width:100%;
-  left:0;
-  font-size:2em;
-  text-align:center;
-  color:#fff;
-  opacity:0;
+  position: absolute;
+  top: 0.6em;
+  width: 100%;
+  left: 0;
+  font-size: 2em;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+}
+
+.arrow-wrap:hover{
+	background-color: #FFE4C4;
+	font-size: 0.6em;
 }
 
 .arrow-wrap:hover .hint {
-  opacity: 1;
+  opacity: .6;
 }
 
 @-webkit-keyframes arrows {
@@ -320,7 +316,7 @@
 }
 
 .arrow-wrap .arrow {
-  -webkit-animation: arrows 2.8s 0.4s;
+  -webkit-animation: arrows 2s 0.4s;
   -webkit-animation-delay: 2s;
 }
 
@@ -463,13 +459,11 @@
 /* End of Form Styling*/
 
 
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
 
+@media(min-width:768px) {
+    
     #wrapper.toggled {
-        padding-left: 0;
+        padding-left: 10px;
     }
 
     #sidebar-wrapper {
@@ -490,4 +484,29 @@
         position: relative;
         margin-right: 0;
     }
+
+}
+
+@media(max-width:768px) {
+	
+	body {
+		font-size: 1em;
+	}
+	
+	.fa {
+		font-size: .5em;
+		padding-top: 5px;
+	}
+	
+	.sidebar-nav li {
+		font-size: 10px;	
+	}
+	
+	#sidebar-wrapper {
+		padding: 5px;
+		left: 225px;
+		
+	}
+	
+	
 }
