--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script);
 @import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
-
+@import url(http://fonts.googleapis.com/css?family=Satisfy);
 body {
 	font-family: sans-serif;
 }
@@ -37,12 +37,13 @@ body {
 
 #wrapper.toggled .arrow-icon {
 	transform: rotate(180deg);
-	color: #FFE4C4;
+	color: #20B2AA;
+	font-size: 1.3em;
 }
 
 #wrapper.toggled .arrow-icon:hover{
-	color: #20B2AA;
-	font-size: 1em;
+	color: #555;
+	font-size: 1.5em;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -100,65 +101,60 @@ body {
 .btn {
 	align-content: center; 
 	position: relative;
-	font-size: 3.5em;
-	color: #FFE4C4;
+	font-size: 4em;
+	color: #39CCCC;
 	left: 30px;
 }
 
 .btn:hover{
-	color: black;
-	font-size: 3.8em;
+	color: #222;
+	font-size: 4.5em;
 }
 
 /* End of Sidebar Styles */
 
 /* Main Page Content */
 
+
 #wrapper {
-	padding: 0px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
+}   
 
 .intro {
-	width: 100%;
-	height: 900px;
-	margin: 0;
-	background-size: cover;
+	height: 840px;
+	position: relative;
 }
 
 .banner {
-	width: 60%;
-	margin: 10% 20%;
+	width: 50%;
+	margin: 0 25%;
 	text-align: center;
 	position: relative;
 	z-index: 1000;	
 }
 
-.navigation {
-  width: 100%;
-	padding-right: 5%;
-	float: right;
-	position: relative;
-	text-align: right;
-}
-
-
 .about {
 	position: relative;
-	margin-bottom: 10%;
+
 }
 
 .wrap-about {
-	padding-left: 20%;
-	padding-bottom: 10%;
+	text-align: center;
+	padding-bottom: 5%;
+	background-color: rgba(211,211,211,0.4);
+	border-bottom: 3px solid black;
+	margin-left: 15px;
 }
 
+
 .wrap-contact-form {
-	padding-left: 15%;
-	padding-bottom: 5%;
+	text-align: center;
+	padding: 5% 25%;
+	background-color: rgba(211,211,211,0.4);
+	border-bottom: 7px solid black;
 }
 /* End of Main Page Content*/
 
@@ -167,14 +163,14 @@ body {
   font-family: 'Ubuntu';
   color: black;
 	text-shadow: 2px 3px #FFE4C4;
-  font-size: 8em;
+  font-size: 7em;
   line-height: 1;
 }
 
 .portfolio-link {
 	line-height: 3;
 	text-decoration: none;
-	font-family: 'Raleway Dots';
+	font-family: 'Satisfy';
 	text-shadow: 2px -2px black;
 	font-size: 6em;
 	color: #20B2AA;
@@ -184,11 +180,8 @@ body {
 .portfolio-link:hover{
 	text-decoration: none;
 	font-size: 6.5em;
-	color: black;
-	text-shadow: 2px 3px white;
-	opacity: 0.7;
-	transition: 1.5s ease;
-	text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2;
+	color: #20B2AA;
+	opacity: 0.8;
 }
 
 .portfolio-link:active {
@@ -202,20 +195,59 @@ body {
   padding: 5%;
   text-align: center;
   text-transform: uppercase;
-  text-rendering: optimizeLegibility;
   color: #131313;
   letter-spacing: .15em;
-  text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2;
 }
 
 .about-par {
-	font-size: 2em;
+	text-align: center;
+	position: relative;
+	height: 400px;
+	width: 400px;
+	border-radius: 50%;
+	background-color: mediumturquoise;
+	border: 7px solid black;
+	display: inline-block;
+	    -webkit-animation-name: example; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
+    -webkit-animation-iteration-count: 3; /* Chrome, Safari, Opera */
+    animation-name: circle;
+    animation-duration: 4s;
+    animation-iteration-count: 3;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes circle {
+    0%   {top:0px;}
+    25%  {top:25px;}
+		50%  {top:15px;}
+    100% {top:0px;}
+}
+
+/* Standard syntax */
+@keyframes circle {
+    0%   {top:0px;}
+    25%  {top:25px;}
+		50%  {top:15px;}
+    100% {top:0px;}
+}
+
+
+.circle1{
+	font-size: 1.8em;
+	padding: 20%;
+}
+
+.photo{
+	background-image: url(/images/atl.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 #submitForm{
 		width: 100px;
 		height: 40px;
-		font-family: 'Dancing Script';
+		font-family: 'Ubuntu';
 		font-size: 2em;
 		color: white;
 		background-color: palevioletred;
@@ -223,7 +255,6 @@ body {
 		border-radius: 5px;
 		border: none; 
 		box-shadow: 2px 3px black;
-		margin-left: 45%;
 		margin-top: 2%;
 }
 
@@ -234,11 +265,14 @@ body {
 }
 
 .contact-form-title {
-		font-family: 'Helvetica Neue';
-		font-size: 2.5em;
+		font-family: 'Ubuntu';
+		font-size: 5em;
 		text-shadow: -2px 1px #AAA;
 		padding: 2%;
-		
+		text-transform: uppercase;
+  	text-rendering: optimizeLegibility;
+		letter-spacing: .15em;
+		text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2;
 }
 /* Scroll Arrow Style */
 .arrow-wrap {
@@ -278,7 +312,7 @@ body {
 	border-style: solid;
 	border-width: 3em 3em 0 3em;
 	border-color: #111 transparent transparent transparent;
-  -webkit-transform: rotate(360deg)
+  -webkit-transform: rotate(360deg);
 }
 
 .hint {
@@ -293,8 +327,8 @@ body {
 }
 
 .arrow-wrap:hover{
-	background-color: #FFE4C4;
-	font-size: 0.6em;
+	background-color: #EEE;
+	font-size: 0.55em;
 }
 
 .arrow-wrap:hover .hint {
@@ -324,8 +358,8 @@ body {
 /* Form Styling */
 .form-build {
 	text-align: center;
-	
 }
+
 .input {
 	position: relative;
 	z-index: 1;
@@ -394,7 +428,7 @@ body {
 .input_label--yoko {
 	position: relative;
 	width: 100%;
-	color: #FF1493;
+	color: #20B2AA;
 	text-align: left;
 }
 
@@ -405,7 +439,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 4em;
-	background: #FF1493;
+	background: #20B2AA;
 	-webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
 	transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
 	-webkit-transform-origin: 50% 100%;
@@ -421,7 +455,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 0.25em;
-	background: #483D8B;
+	background: #000;
 	-webkit-transform-origin: 50% 0%;
 	transform-origin: 50% 0%;
 	-webkit-transition: -webkit-transform 0.3s;
@@ -485,6 +519,9 @@ body {
         margin-right: 0;
     }
 
+		.photo {
+		top: -20px;
+	}
 }
 
 @media(max-width:768px) {
@@ -493,8 +530,12 @@ body {
 		font-size: 1em;
 	}
 	
+	.photo {
+		top: -20px;
+	}
+	
 	.fa {
-		font-size: .5em;
+		font-size: .9em;
 		padding-top: 5px;
 	}
 	
@@ -505,8 +546,9 @@ body {
 	#sidebar-wrapper {
 		padding: 5px;
 		left: 225px;
-		
 	}
 	
-	
+	.about-par {
+		width: 250px;
+		height: 250px;
 }
