--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Dancing+Script);
-@import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
-@import url(http://fonts.googleapis.com/css?family=Ubuntu);
-@import url(http://fonts.googleapis.com/css?family=Satisfy);
+@import url(//fonts.googleapis.com/css?family=Dancing+Script);
+@import url(//fonts.googleapis.com/css?family=Raleway+Dots);
+@import url(//fonts.googleapis.com/css?family=Ubuntu);
+@import url(//fonts.googleapis.com/css?family=Satisfy);
 body {
 	font-family: sans-serif;
 }
